# supercollider-score-visualizer

./: .gitignore  ARQUITECTURA_AUDIOVISUAL.md  App.tsx  BUGFIXES.md  Cargo.toml  LICENSE  LIMPIEZA_COMPLETADA_FINAL.md  MAPAS_PROFESIONALES_RESUMEN.md  README.md  cleanup_final.sh  config.json  config.toml  dasp_sample_addition.txt  demo_professional_mapping_integration.rs  ejemplos_live_coding.scd  index.html  metadata.json  osc_debug_output.txt  osc_receiver.py  package.json  realtime_analysis.scd  sc_analyzer_example.scd  sc_auto_visualizer.scd  setup_visualizer.scd  start.sh  start_visualizer.sh  test_conexion.scd  test_visualizer.scd  types.ts  verificar_configuracion.sh
.continue/: continue.config.json
ELIMINADOS_TEMP/: clean_repository.sh  config_backup.rs  main_clean.rs  visual_backup.rs
backup/: CHECKLIST_PRIMER_USO.md  CORRECCION_CLASES_COMPLETADA.md  CORRECCION_SINTAXIS_COMPLETADA.md  CORRECCION_SINTAXIS_UGENS.md  GUIA_PRIMER_USO.md  GUIA_VALIDACION.md  PREPARACION_FASE_COMPLEJA.md  RESOLUCION_PROBLEMA_ONSETS.md  VALIDACION_COMPLETADA.md
components/: Card.tsx  CodeBlock.tsx  ContentDisplay.tsx  OwnershipVisual.tsx  Sidebar.tsx  WeekContent.tsx
data/: studyPlanData.tsx
dev/: README.md
docs/: ARCHITECTURE.md  ESTADO_FINAL_ACTUALIZADO.md  ESTADO_SINTAXIS_CORREGIDA.md  GUIA_LIVE_CODING.md  INDEX.md  INICIO_RAPIDO.md  MEJORAS.md  MEJORAS_AUDIOVISUALES_COMPLETAS.md  MEJORAS_COLORES_SINCRONIZACION.md  MEJORAS_VISUALIZACION.md  README.md  RESUMEN_LIVE_CODING.md  RESUMEN_SOLUCIONES_FINALES.md  ROADMAP.md  SINCRONIZACION_PERFECTA.md  SISTEMA_SCROLL_IMPLEMENTADO.md  SISTEMA_UNIVERSAL_FINAL.md  SOLUCION_CRASH_VISUALIZADOR.md  SOLUCION_DEFINITIVA.md  SOLUCION_FINAL_SINTAXIS.md  SOLUCION_NO_VISUALIZACION.md  SOLUCION_PARSING_OSC_FLEXIBLE.md  SOLUCION_PROXYSPACE.md  SOLUCION_VARIABLE_NO_DEFINIDA.md  VERIFICACION_ERRORES_SINTAXIS.md
scripts/: check_window.sh  cleanup.sh  diagnose_onsets_final.sh  diagnose_visualization.sh  inicio_rapido.sh  quick_start.sh  start_full_integration.sh  test_integration.sh  test_integration_complete.sh  validacion_correccion.sh  validate_supercollider_classes.sh  validate_ugen_syntax.sh
src/: analyzer_test.rs  audio.rs  audio_analyzer.rs  audio_simple.rs  capture.rs  config.rs  config_path_helper.rs  errors.rs  events.rs  gui.rs  lenguaje_visual_universal.rs  lib.rs  live_coding_launcher.rs  live_coding_main.rs  logging.rs  main.rs  main_old_backup.rs  main_refactored.rs  menu.rs  midi.rs  model.rs  model_impl.rs  musical_events.rs  osc.rs  osc_complex.rs  osc_server.rs  osc_simple.rs  update.rs  (+1 more)
(+186 files in other folders)
