[package]
name = "sc_score_visualizer"
version = "2.0.0"
edition = "2021"
description = "Live Coding Visualizer with Nannou and SuperCollider"
license = "MIT"



[[bin]]
name = "sc_score_visualizer"
path = "src/main.rs"

[dependencies]
nannou = "0.18"
nannou_osc = "0.18"
noise = "0.8"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
config = "0.11"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
notify = "6.1"
tokio = { version = "1.0", features = ["rt", "sync", "fs", "rt-multi-thread"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
