[package]
name = "sc_score_visualizer"
version = "0.1.0"
edition = "2021"

[dependencies]

anyhow = "1.0"
nannou = "0.19"
rosc = "0.7"
log = "0.4"
socket2 = "0.5"
cpal = "0.15"
fundsp = "0.15"
rustfft = "6.1"
rgb = "0.8"
nannou_osc = "0.19.0"
crossbeam-channel = "0.5"
flume = "0.11.1"
midir = "0.10.1"
serde = { version = "1.0.219", features = ["derive"] }
chrono = "0.4.41"
env_logger = "0.10"
toml = "0.9.2"
dasp_sample = "0.11"
num-traits = "0.2"
clap = { version = "4.0", features = ["derive"] }
